--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">  
   <title>Frontend Mentor | Chat app CSS Illustration</title>
   <link rel="stylesheet" href="style.css">
@@ -12,72 +12,78 @@
 </head>
 
 <body>
-  <section class="smartphone">
-    <div class="smartphone__screen">
-      <div class="user">
-        <div class="smartphone__screen-notch"></div>
-        <div class="user__header">
-          <p> < </p>
-          <img src="./images/avatar.jpg">
-          <div class="user__status">
-            <h2>Samuel Green</h2>
-            <p>Available to Walk</p>
+  <div class="figures">
+    <div class="figureOne"></div>
+  </div>
+  
+  <div class="wrapp">
+    <section class="smartphone">
+      <div class="smartphone__screen">
+        <div class="user">
+          <div class="smartphone__screen-notch"></div>
+          <div class="user__header">
+            <p> < </p>
+            <img src="/images/avatar.jpg">
+            <div class="user__status">
+              <h2>Samuel Green</h2>
+              <p>Available to Walk</p>
+            </div>
+            <p>...</p>
           </div>
-          <p>...</p>
         </div>
+
+        <div class="chat">
+          <div class="chat__left">
+            <p>That sounds great. I’d be happy to discuss more.</p>
+          </div>
+          <div class="chat__left">
+            <p>Could you send over some pictures of your dog, please?</p>
+          </div>
+          <div class="chat__right gallery">
+            <img src="/images/dog-image-1.jpg">
+            <img src="/images/dog-image-2.jpg">
+            <img src="/images/dog-image-3.jpg">
+          </div>
+          <div class="chat__right">
+            <p>Here are a few pictures. She’s a happy girl!</p>
+          </div>
+          <div class="chat__right">
+            <p>Can you make it?</p>
+          </div>
+          <div class="chat__left">
+            <p>She looks so happy! The time we discussed works.  How long shall I take her out for?</p>
+          </div>
+          <div class="chat__left price">
+            <div class="checkbox"></div>
+            <p>30 minute walk</p>
+            <span>$29</span>
+          </div>
+          <div class="chat__left price">
+            <div class="checkbox"></div>
+            <p>1 hour walk</p>
+            <span>$49</span>
+          </div>
+        </div>
+
+        <div class="message">
+          <input type="text" placeholder="Type a Message">
+          <button>></button>
+        </div>
+
       </div>
+    </section>
 
-      <div class="chat">
-        <div class="chat__left">
-          <p>That sounds great. I’d be happy to discuss more.</p>
-        </div>
-        <div class="chat__left">
-          <p>Could you send over some pictures of your dog, please?</p>
-        </div>
-        <div class="chat__right gallery">
-          <img src="./images/dog-image-1.jpg">
-          <img src="./images/dog-image-2.jpg">
-          <img src="./images/dog-image-3.jpg">
-        </div>
-        <div class="chat__right">
-          <p>Here are a few pictures. She’s a happy girl!</p>
-        </div>
-        <div class="chat__right">
-          <p>Can you make it?</p>
-        </div>
-        <div class="chat__left">
-          <p>She looks so happy! The time we discussed works.  How long shall I take her out for?</p>
-        </div>
-        <div class="chat__left price">
-          <div class="checkbox"></div>
-          <p>30 minute walk</p>
-          <span>$29</span>
-        </div>
-        <div class="chat__left price">
-          <div class="checkbox"></div>
-          <p>1 hour walk</p>
-          <span>$49</span>
-        </div>
-      </div>
-
-      <div class="message">
-        <input type="text" placeholder="Type a Message">
-        <button>></button>
-      </div>
-
-    </div>
-  </section>
-
-  <section class="booking">
-    <h2>Simple booking</h2>
-    <p>Stay in touch with our dog walkers through the chat interface. This makes it easy to 
-      discuss arrangements and make bookings. Once the walk has been completed you can rate 
-      your walker and book again all through the chat.</p>
-  </section>
+    <section class="booking">
+      <h2>Simple booking</h2><br>
+      <p>Stay in touch with our dog walkers through the chat interface. This makes it easy to 
+        discuss arrangements and make bookings. Once the walk has been completed you can rate 
+        your walker and book again all through the chat.</p>
+    </section>
+  </div>
 
   <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="https://dr-frontend.github.io/portfolio">David Romero</a>.
+    <p>Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
+    Coded by <a href="https://dr-frontend.github.io/portfolio/">David Romero</a>.</p>
   </div>
 
 </body>
