--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
           <div class="smartphone__screen-notch"></div>
           <div class="user__header">
             <p> < </p>
-            <img src="/images/avatar.jpg">
+            <img src="./images/avatar.jpg">
             <div class="user__status">
               <h2>Samuel Green</h2>
               <p>Available to Walk</p>
@@ -40,9 +40,9 @@
             <p>Could you send over some pictures of your dog, please?</p>
           </div>
           <div class="chat__right gallery">
-            <img src="/images/dog-image-1.jpg">
-            <img src="/images/dog-image-2.jpg">
-            <img src="/images/dog-image-3.jpg">
+            <img src="./images/dog-image-1.jpg">
+            <img src="./images/dog-image-2.jpg">
+            <img src="./images/dog-image-3.jpg">
           </div>
           <div class="chat__right">
             <p>Here are a few pictures. She’s a happy girl!</p>
